--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mytodo",
-    "homepage": "https://github.com/77-mika",
+    "homepage": "https:///77-mika.github.io/react-todo/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -10,7 +10,7 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "predeply": "npm run build",
-        "deploy":"gh-pages -d dist"
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "react": "^19.1.1",
