--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mytodo",
-    "homepage": "https:///77-mika.github.io/react-todo/",
+    "homepage": "https:///77-mika.github.io/testio/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
